# short_link_service

./: docker-compose.yml  main.py  pyproject.toml
src/: main.py
src/api/v1/: routers.py
src/core/: config.py
src/db/: db_interface.py  mongo.py
src/interfaces/: bd_interface.py
src/models/: models.py
src/schemas/: schemas.py
src/service/: service.py
templates/: index.html
