[project]
name = "short-link-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander_Kibin",email = "3441@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
